/*
 * This Java source file was generated by the Gradle 'init' task.
 */
package td1;

import td1.step5.api.burger.BurgerBuilder;
import td1.step5.api.burger.BurgerMeat;
import td1.step5.api.burger.BurgerSauce;
import td1.step5.api.restauration.Food;

import java.util.Arrays;
import java.util.List;

import static td1.step5.api.burger.MenuSize.BIG;
import static td1.step5.api.burger.MenuType.FISH_MENU;
import static td1.step5.api.burger.MenuType.MEAT_MENU;

public class App {
    public static void main(String args[]) {
        Food alice_dinner = BurgerBuilder.order_menu("Fishy", FISH_MENU).cook();
        Food bob_dinner = BurgerBuilder.order_menu("Beefy", MEAT_MENU).with_onions().with_cheese().cook();
        Food charles_dinner = BurgerBuilder.order_personal("Own Style", BurgerMeat.BEEF, BIG).with_onions()
                .with_cheese().with_sauce(BurgerSauce.BARBECUE).with_sauce(BurgerSauce.BEARNAISE)
                .with_sauce(BurgerSauce.BURGER).with_cheese().cook();
        List<Food> dinners = Arrays.asList(alice_dinner, bob_dinner, charles_dinner);
        for (Food dinner : dinners) {
            System.out.println(dinner);
        }
    }
}
